force-app/main/default/objects/Prescription__c/Prescription__c.object-meta.xml
<CustomObject>
    <label>Prescription</label>
    <nameField>
        <displayFormat>PRSC-{0000}</displayFormat>
        <label>Prescription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescription</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>