force-app/main/default/objects/Prescription__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Drug</label>
    <referenceTo>Drug__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>