force-app/main/default/objects/Prescription__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Prescription</relationshipLabel>
    <relationshipName>Prescription</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>