force-app/main/default/objects/Prescription__c/fields/Prescribed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_Quantity__c</fullName>
    <label>Prescribed Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>