force-app/main/default/objects/Prescription__c/fields/Prescription_Name__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Name__c</fullName>
    <formula>Patient__r.Name + &quot; Prescription.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prescription Name</label>
    <type>Text</type>
</CustomField>