force-app/main/default/objects/Prescription__c/fields/Refills_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Refills_Allowed__c</fullName>
    <label>Refills Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>