force-app/main/default/objects/Prescription__c/fields/Refills_Used__c.field-meta.xml
<CustomField>
    <fullName>Refills_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Refills Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>