force-app/main/default/objects/Prescription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Prescribed_Quantity__c</columns>
    <columns>Refills_Allowed__c</columns>
    <columns>Refills_Used__c</columns>
    <columns>Status__c</columns>
    <columns>Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>